--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -202,6 +202,12 @@
     opacity: 0;
     animation: none;
   }
+
+  &.#{$prefix}--btn--disabled.#{$prefix}--tooltip--a11y::before,
+  &.#{$prefix}--btn--disabled.#{$prefix}--tooltip--a11y::after,
+  &.#{$prefix}--btn--disabled .#{$prefix}--assistive-text {
+    display: none;
+  }
 }
 
 // Tooltip
