--- a/packages/components/src/globals/scss/_tooltip.scss
+++ b/packages/components/src/globals/scss/_tooltip.scss
@@ -60,9 +60,8 @@
     width: auto;
   }
 
-  // Windows HCM Fix
-  @media screen and (-ms-high-contrast: active) {
-    // `GrayText` is a CSS2 system color to help improve colors in HCM
+  // Windows, Firefox HCM Fix
+  @media screen and (-ms-high-contrast: active), screen and (prefers-contrast) {
     border: 1px solid transparent;
   }
 }
