--- a/packages/components/src/components/treeview/_treeview.scss
+++ b/packages/components/src/components/treeview/_treeview.scss
@@ -35,24 +35,34 @@
       @include focus-outline('outline');
     }
 
-    .#{$prefix}--tree-node--disabled {
-      color: $disabled-02;
-      background-color: $disabled-01;
-      pointer-events: none;
+    .#{$prefix}--tree-node--disabled:focus > .#{$prefix}--tree-node__label {
+      outline: none;
     }
 
-    .#{$prefix}--tree-node--disabled .#{$prefix}--tree-node__label:hover {
+    .#{$prefix}--tree-node--disabled,
+    .#{$prefix}--tree-node--disabled .#{$prefix}--tree-node__label:hover,
+    .#{$prefix}--tree-node--disabled
+      .#{$prefix}--tree-node__label:hover
+      .#{$prefix}--tree-node__label__details {
+      color: $disabled-02;
       background-color: $disabled-01;
     }
 
     .#{$prefix}--tree-node--disabled .#{$prefix}--tree-parent-node__toggle-icon,
-    .#{$prefix}--tree-node--disabled .#{$prefix}--tree-node__icon {
+    .#{$prefix}--tree-node--disabled .#{$prefix}--tree-node__icon,
+    .#{$prefix}--tree-node--disabled
+      .#{$prefix}--tree-node__label:hover
+      .#{$prefix}--tree-parent-node__toggle-icon,
+    .#{$prefix}--tree-node--disabled
+      .#{$prefix}--tree-node__label:hover
+      .#{$prefix}--tree-node__icon {
       fill: $disabled-02;
     }
 
+    .#{$prefix}--tree-node--disabled,
     .#{$prefix}--tree-node--disabled
       .#{$prefix}--tree-parent-node__toggle-icon:hover {
-      cursor: default;
+      cursor: not-allowed;
     }
 
     .#{$prefix}--tree-node__label {
@@ -62,8 +72,19 @@
       min-height: rem(32px);
 
       &:hover {
+        color: $text-01;
         background-color: $hover-ui;
       }
+    }
+
+    .#{$prefix}--tree-node__label:hover .#{$prefix}--tree-node__label__details {
+      color: $text-01;
+    }
+
+    .#{$prefix}--tree-node__label:hover
+      .#{$prefix}--tree-parent-node__toggle-icon,
+    .#{$prefix}--tree-node__label:hover .#{$prefix}--tree-node__icon {
+      fill: $icon-01;
     }
 
     .#{$prefix}--tree-leaf-node {
@@ -101,7 +122,7 @@
     .#{$prefix}--tree-parent-node__toggle-icon {
       transform: rotate(-90deg);
       transition: all $duration--fast-02 motion(standard, productive);
-      fill: $icon-01;
+      fill: $icon-02;
     }
 
     .#{$prefix}--tree-parent-node__toggle-icon--expanded {
@@ -110,7 +131,7 @@
 
     .#{$prefix}--tree-node__icon {
       margin-right: $spacing-03;
-      fill: $icon-01;
+      fill: $icon-02;
     }
 
     .#{$prefix}--tree-node--selected > .#{$prefix}--tree-node__label {
@@ -122,6 +143,15 @@
       }
     }
 
+    .#{$prefix}--tree-node--selected
+      > .#{$prefix}--tree-node__label
+      .#{$prefix}--tree-parent-node__toggle-icon,
+    .#{$prefix}--tree-node--selected
+      > .#{$prefix}--tree-node__label
+      .#{$prefix}--tree-node__icon {
+      fill: $icon-01;
+    }
+
     .#{$prefix}--tree-node--active > .#{$prefix}--tree-node__label {
       position: relative;
 
@@ -131,7 +161,7 @@
         left: 0;
         width: rem(4px);
         height: 100%;
-        background-color: $interactive-01;
+        background-color: $interactive-04;
         content: '';
       }
     }
